@@ -46,7 +46,7 @@
     <commons-lang3.version>3.18.0</commons-lang3.version>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <mockito.version>5.2.0</mockito.version>
+    <mockito.version>4.11.0</mockito.version>
     <jackson.version>2.18.3</jackson.version>
     <log4j.version>2.22.1</log4j.version>
     <slf4j.version>2.0.13</slf4j.version>
@@ -353,7 +353,6 @@
           </excludes>
           <argLine>
             @{argLine}
-            --add-opens=java.base/java.nio=ALL-UNNAMED
             -Dnet.bytebuddy.experimental=true
           </argLine>
           <systemPropertyVariables>
@@ -422,27 +421,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.diffplug.spotless</groupId>
-        <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.39.0</version>
-        <executions>
-          <execution>
-            <id>format</id>
-            <goals>
-              <goal>apply</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-        <configuration>
-          <java>
-            <googleJavaFormat>
-              <version>1.18.1</version>
-            </googleJavaFormat>
-          </java>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
